--- a/Index.html
+++ b/Index.html
@@ -2,12 +2,30 @@
 <html lang="en">
 <head>
    <stlye>
-
+        h1 (color:(0,90,30) )
    </stlye>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>MY WEBSITE</title>
 </head>
 <body>
-   <
+  <h1 id="top">Home Webpage</h1>
+   <p>Hello</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tellus id interdum velit laoreet id donec ultrices tincidunt. Eget nunc lobortis mattis aliquam faucibus purus. Sit amet cursus sit amet dictum sit amet justo. Tortor pretium viverra suspendisse potenti nullam ac. Cursus sit amet dictum sit. Diam maecenas ultricies mi eget mauris pharetra et ultrices. Volutpat odio facilisis mauris sit amet massa vitae tortor condimentum. Sed lectus vestibulum mattis ullamcorper velit sed. Accumsan lacus vel facilisis volutpat est velit egestas dui id. Amet massa vitae tortor condimentum lacinia. Adipiscing vitae proin sagittis nisl.</p>
+
+<p>Lobortis elementum nibh tellus molestie nunc non blandit massa enim. Diam in arcu cursus euismod quis. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Sed velit dignissim sodales ut eu sem. Placerat duis ultricies lacus sed turpis tincidunt id. Donec et odio pellentesque diam volutpat commodo sed egestas egestas. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec. Adipiscing elit duis tristique sollicitudin nibh sit. Et netus et malesuada fames ac turpis egestas. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Egestas purus viverra accumsan in nisl. Blandit turpis cursus in hac habitasse platea. Eu non diam phasellus vestibulum. Tristique et egestas quis ipsum suspendisse. Elementum pulvinar etiam non quam lacus suspendisse faucibus. Amet massa vitae tortor condimentum. Dictum non consectetur a erat. Eu turpis egestas pretium aenean.</p>
+
+<p>Ultrices in iaculis nunc sed augue lacus viverra. Mauris pellentesque pulvinar pellentesque habitant morbi. Pulvinar etiam non quam lacus suspendisse. Ac ut consequat semper viverra nam libero justo laoreet sit. Ipsum dolor sit amet consectetur adipiscing elit. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Quis varius quam quisque id diam vel. Non sodales neque sodales ut etiam. Cras tincidunt lobortis feugiat vivamus at augue eget. Adipiscing commodo elit at imperdiet dui accumsan sit amet nulla. Cras sed felis eget velit. Nunc sed augue lacus viverra vitae congue. Porta nibh venenatis cras sed felis eget velit. Interdum velit euismod in pellentesque massa placerat. Vitae purus faucibus ornare suspendisse sed. Dolor sit amet consectetur adipiscing elit. Sed elementum tempus egestas sed sed risus. Adipiscing at in tellus integer feugiat scelerisque varius morbi.</p>
+
+<p>Elementum tempus egestas sed sed risus pretium quam. Et tortor consequat id porta nibh venenatis cras sed. Et malesuada fames ac turpis egestas maecenas pharetra convallis. Non diam phasellus vestibulum lorem sed. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed. Tempor commodo ullamcorper a lacus. Sed enim ut sem viverra aliquet eget sit. Amet volutpat consequat mauris nunc congue nisi vitae suscipit. Sed velit dignissim sodales ut eu sem integer. Leo vel orci porta non pulvinar neque. Eget aliquet nibh praesent tristique magna. Nibh praesent tristique magna sit amet purus gravida quis. Condimentum id venenatis a condimentum vitae. In egestas erat imperdiet sed euismod. Dapibus ultrices in iaculis nunc sed. Orci a scelerisque purus semper eget duis at tellus at. Felis eget nunc lobortis mattis. Amet consectetur adipiscing elit ut aliquam purus sit amet luctus.</p>
+
+<p>Nibh cras pulvinar mattis nunc sed blandit. Ornare lectus sit amet est placerat in egestas erat. Pellentesque eu tincidunt tortor aliquam nulla. Egestas quis ipsum suspendisse ultrices gravida dictum fusce. Turpis nunc eget lorem dolor sed viverra. Commodo ullamcorper a lacus vestibulum. Senectus et netus et malesuada. Leo integer malesuada nunc vel risus commodo viverra maecenas accumsan. Nisi scelerisque eu ultrices vitae auctor eu augue ut. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Sit amet mauris commodo quis imperdiet. Fermentum leo vel orci porta non pulvinar. Enim neque volutpat ac tincidunt. Dolor magna eget est lorem ipsum dolor sit amet consectetur. Facilisis leo vel fringilla est ullamcorper eget nulla. Dolor sit amet consectetur adipiscing elit. Feugiat vivamus at augue eget arcu dictum varius duis at. Nam libero justo laoreet sit amet cursus sit. Integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque.</p>
+
+<a href="https://www.imdb.com/" target="_blank">Link to IMDB</a> <br/>
+<a href="https://www.amazon.com/" target="_blank">Link to Amazon</a> <br/>
+
+<a href="mailto:s.hannah.amato@redclayschools.com">Mail to Hannah</a><br/>
+<a href="#top">Go to top</a><br/>
+<a href="NotTheHomepage.html"target="_blank">Go to Subpage 1</a> <br/>
+
 </body>
 </html>
