--- a/NotTheHomepage.html
+++ b/NotTheHomepage.html
@@ -1,1 +1,11 @@
-html:5
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Subpage 1</h1>
+    <p>Nothing to see here...</p>
+</body>
+</html>
