--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <stlye>
-        h1 (color:(0,90,30) )
-   </stlye>
     <meta charset="UTF-8">
     <title>MY WEBSITE</title>
+       <style>
+           body {background-color: lightblue} {font: }
+           li1, li2, li3,  {color:aqua}
+    </style>
 </head>
 <body>
+
+  <img src="Images/Cactus.jpg" alt="a mini cactus" title="look at this fake cactus I dare you" width="400"/>
   <h1 id="top">Home Webpage</h1>
+  <ul>
+     <li1>TTYL</li1>
+     <ul>
+         <li>talk to you later</li>
+     </ul>
+     <li2>OMG</li2>
+     <ul>
+         <li>oh my god</li>
+         <li>oh my gosh</li>
+     </ul>
+     <li3>LOL</li3>
+     <ul>
+         <li>laughing out loud</li>
+         <li>Lot's of love- te</li>
+     </ul>
+ </ul>
    <p>Hello</p>
    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tellus id interdum velit laoreet id donec ultrices tincidunt. Eget nunc lobortis mattis aliquam faucibus purus. Sit amet cursus sit amet dictum sit amet justo. Tortor pretium viverra suspendisse potenti nullam ac. Cursus sit amet dictum sit. Diam maecenas ultricies mi eget mauris pharetra et ultrices. Volutpat odio facilisis mauris sit amet massa vitae tortor condimentum. Sed lectus vestibulum mattis ullamcorper velit sed. Accumsan lacus vel facilisis volutpat est velit egestas dui id. Amet massa vitae tortor condimentum lacinia. Adipiscing vitae proin sagittis nisl.</p>
 
